feat: recreate initialization flow within most important classes.